# letterboxd-collage-api

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml
letterboxd_collage/: app.py  letterboxd_scraping.py  webdriver_pool.py
templates/: index.html
