[tool.poetry]
name = "letterboxd-collage"
version = "0.1.0"
description = ""
authors = ["itallopacheco <itallo.santos@lais.huol.ufrn.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.9"
fastapi = "^0.111.0"
bs4 = "^0.0.2"
pillow = "^10.3.0"
requests = "^2.32.3"
httpx = "^0.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
